修复了一些错误
